# diaric

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md
.github/workflows/: ci.yml
benches/: ahc.rs  centroid.rs  ops.rs  pipeline.rs  segment.rs  vbx.rs
ci/: miri_sb.sh  miri_tb.sh  sde_avx2.sh  sde_avx512.sh
examples/: chacha_fixture_gen.rs
models/: SOURCE.md
models/plda/: SOURCE.md
scripts/: export-plda-weights.py  extract-plda-blobs.sh  extract-plda-eigenvectors.py
src/: lib.rs  provenance.rs  test_util.rs
src/aggregate/: count.rs  mod.rs  parity_tests.rs
src/cluster/: agglomerative.rs  error.rs  mod.rs  offline.rs  options.rs  spectral.rs  test_util.rs  tests.rs
src/cluster/ahc/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/cluster/centroid/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/cluster/hungarian/: algo.rs  error.rs  lsap.rs  mod.rs  parity_tests.rs  tests.rs
src/cluster/online/: mod.rs  tests.rs
src/cluster/vbx/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/embed/: embedder.rs  error.rs  fbank.rs  mod.rs  model.rs  options.rs  types.rs
src/offline/: algo.rs  mod.rs  owned.rs  owned_smoke_tests.rs  parity_tests.rs  tests.rs
src/ops/: mod.rs  spill.rs
src/ops/arch/: mod.rs
src/ops/arch/neon/: axpy.rs  dot.rs  kahan.rs  mod.rs  pdist_euclidean.rs
src/ops/arch/x86_avx2/: axpy.rs  dot.rs  mod.rs  pdist_euclidean.rs
src/ops/arch/x86_avx512/: axpy.rs  dot.rs  mod.rs  pdist_euclidean.rs
src/ops/dispatch/: axpy.rs  dot.rs  kahan.rs  lse.rs  mod.rs  pdist_euclidean.rs
src/ops/scalar/: axpy.rs  dot.rs  kahan.rs  lse.rs  mod.rs  pdist_euclidean.rs
src/pipeline/: algo.rs  error.rs  mod.rs  parity_tests.rs  tests.rs
src/plda/: error.rs  loader.rs  mod.rs  parity_tests.rs  tests.rs  transform.rs
src/reconstruct/: algo.rs  error.rs  mod.rs  parity_tests.rs  rttm.rs  rttm_parity_tests.rs  tests.rs
src/segment/: error.rs  hysteresis.rs  mod.rs  model.rs  options.rs  powerset.rs  segmenter.rs  stitch.rs  types.rs  window.rs
tests/: chacha_keystream_fixture.rs
tests/parity/fixtures/01_dialogue/: ahc_init_labels.npy  clustering.npz  manifest.json  plda_embeddings.npz  raw_embeddings.npz  reconstruction.npz  reference.rttm  segmentations.npz  vbx_state.npz
tests/parity/fixtures/02_pyannote_sample/: ahc_init_labels.npy  clustering.npz  manifest.json  plda_embeddings.npz  raw_embeddings.npz  reconstruction.npz  reference.rttm  segmentations.npz  vbx_state.npz
tests/parity/fixtures/03_dual_speaker/: ahc_init_labels.npy  clustering.npz  manifest.json  plda_embeddings.npz  raw_embeddings.npz  reconstruction.npz  reference.rttm  segmentations.npz  vbx_state.npz
tests/parity/fixtures/04_three_speaker/: ahc_init_labels.npy  clustering.npz  manifest.json  plda_embeddings.npz  raw_embeddings.npz  reconstruction.npz  reference.rttm  segmentations.npz  vbx_state.npz
tests/parity/fixtures/05_four_speaker/: ahc_init_labels.npy  clustering.npz  manifest.json  plda_embeddings.npz  raw_embeddings.npz  reconstruction.npz  reference.rttm  segmentations.npz  vbx_state.npz
tests/parity/fixtures/06_long_recording/: ahc_init_labels.npy  clustering.npz  manifest.json  plda_embeddings.npz  raw_embeddings.npz  reconstruction.npz  reference.rttm  segmentations.npz  vbx_state.npz
tests/parity/fixtures/07_yuhewei_dongbei_english/: reference.rttm
tests/parity/fixtures/08_luyu_jinjing_freedom/: ahc_init_labels.npy  ahc_state.npz  clustering.npz  manifest.json  plda_embeddings.npz  raw_embeddings.npz  reconstruction.npz  reference.rttm  segmentations.npz  vbx_state.npz
tests/parity/fixtures/09_mrbeast_dollar_date/: reference.rttm
tests/parity/fixtures/10_mrbeast_clean_water/: ahc_init_labels.npy  clustering.npz  manifest.json  plda_embeddings.npz  raw_embeddings.npz  reconstruction.npz  reference.rttm  segmentations.npz  vbx_state.npz
tests/parity/fixtures/11_mrbeast_age_race/: reference.rttm
tests/parity/fixtures/12_mrbeast_schools/: reference.rttm
tests/parity/fixtures/13_mrbeast_saved_animals/: reference.rttm
tests/parity/fixtures/14_mrbeast_strongman_robot/: reference.rttm
